fixed overlapping footer problem on add device page

--- a/static/style.css
+++ b/static/style.css
@@ -94,6 +94,7 @@ div#devices-container {
     display: flex;
     flex-wrap: wrap;
     justify-content: center;
+    padding-bottom: 50px;
 }
 
 .device
